--- a/src/app/pages/login/signup/signup.component.html
+++ b/src/app/pages/login/signup/signup.component.html
@@ -16,17 +16,16 @@
 
     </div>
     <div class="button-confirmar">
-      <button class="button-entrar" type="submit">Entrar</button>
+      <button class="button-entrar" type="submit">Cadastrar</button>
     </div>
      <div>
       <span class="login">
-        Ja Possui Login? <a routerLink="#"></a>
+        <a routerLink="/signin">Ja Possui Login?</a>
       </span>
      </div>
   </form>
 </div>
 </div>
-<div class="image"></div>
 
 
 
