feat: list all livros of backend

--- a/src/app/pages/login/signin/signin.component.html
+++ b/src/app/pages/login/signin/signin.component.html
@@ -9,7 +9,7 @@
       <input formControlName="senha" type="password" id="senha" placeholder="Senha" required>
     </div>
     <div class="button-confirmar">
-      <button class="button-entrar" type="submit"><a routerLink="/home">Entrar</a></button>
+      <button routerLink="/home" class="button-entrar" type="submit">Entrar</button>
     </div>
      <div>
       <span class="login">
