--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -1,1 +1,28 @@
-<h1>Hello</h1>
+<div class="container">
+    <mat-card class="card">
+
+    <mat-toolbar class="toobar">
+     <span>Listagem De Livros</span>
+    </mat-toolbar>
+
+      <table mat-table [dataSource]="listBlocks "  class="mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id  </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="autor">
+          <th mat-header-cell *matHeaderCellDef> Autor </th>
+          <td mat-cell *matCellDef="let element"> {{element.autor}} </td>
+        </ng-container>
+
+       <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+ </div>
