--- a/src/app/pages/login/signin/signin.component.css
+++ b/src/app/pages/login/signin/signin.component.css
@@ -6,10 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(204,189,244);
-  background: linear-gradient(104deg, rgba(204,189,244,0.7847732843137255) 4%, rgba(117,147,149,1) 91%);
-
-
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,75,101,1) 35%, rgba(0,212,255,1) 100%);
 }
 
 .container-form{
