--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -2,10 +2,20 @@
     <mat-card class="card">
 
     <mat-toolbar class="toobar">
-     <span>Listagem De Livros</span>
-    </mat-toolbar>
+     <span class="title">Listagem De Livros</span>
+     <span class="buttons">
+      <button mat-fab extended color="white" (click)="addNew()">
+        <mat-icon>add_circle</mat-icon>
+        Cadastrar
+      </button>
+      <button mat-fab extended color="white" (click)="newLoad()">
+        <mat-icon>refresh</mat-icon>
+        Carregar
+      </button>
+     </span>
+      </mat-toolbar>
 
-      <table mat-table [dataSource]="listBlocks "  class="mat-elevation-z8">
+      <table mat-table [dataSource]="listBlocks" class="mat-elevation-z8">
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> Id  </th>
           <td mat-cell *matCellDef="let element"> {{element.id}} </td>
