--- a/src/app/pages/home/homepage/homepage.component.css
+++ b/src/app/pages/home/homepage/homepage.component.css
@@ -1,4 +1,5 @@
-.container{
+
+.container-tool{
   width: 100vw;
   height: 100vh;
   padding: 0;
@@ -7,7 +8,6 @@
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,75,101,1) 35%, rgba(0,212,255,1) 100%);
 }
-
 table {
   width: 100%;
 }
@@ -16,7 +16,7 @@ table {
   gap:10px;
 }
 
-.card{
+.card-tool{
   padding: 30px;
   width: 100vw;
 }
