--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -1,38 +1,69 @@
-<div class="container-tool">
-    <mat-card class="card-tool">
+<div class="container-fluid">
+  <div class="row flex-nowrap">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+      <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+        <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+          <span class="fs-5 d-none d-sm-inline">Cadastro de Livros</span>
+        </a>
+        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+          <li class="nav-item">
+              <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline"> <mat-icon fontIcon="home" color="white"></mat-icon>Home
+              </span>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline"><mat-icon fontIcon="book" color="white"></mat-icon>Livros
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline"><mat-icon fontIcon="book" color="white"></mat-icon>Autores
+              </span>
+            </a>
+          </li>
+        </ul>
+        <hr>
+      </div>
+    </div>
+    <div class="col py-3">
+      <div class="container-tool">
+        <mat-card class="card-tool">
+          <mat-toolbar class="toobar">
+            <span class="title">Modulo de Livros</span>
+            <span class="buttons">
+              <button mat-fab extended color="white" (click)="addNew()">
+                <mat-icon>add_circle</mat-icon>
+                Cadastrar
+              </button>
+              <button mat-fab extended color="white" (click)="newLoad()">
+                <mat-icon>refresh</mat-icon>
+                Carregar
+              </button>
+            </span>
+          </mat-toolbar>
 
-    <mat-toolbar class="toobar">
-     <span class="title">Listagem De Livros</span>
-     <span class="buttons">
-      <button mat-fab extended color="white" (click)="addNew()">
-        <mat-icon>add_circle</mat-icon>
-        Cadastrar
-      </button>
-      <button mat-fab extended color="white" (click)="newLoad()">
-        <mat-icon>refresh</mat-icon>
-        Carregar
-      </button>
-     </span>
-      </mat-toolbar>
+          <table mat-table [dataSource]="listBlocks" class="mat-elevation-z8">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> Id </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
 
-      <table mat-table [dataSource]="listBlocks" class="mat-elevation-z8">
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id  </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+            <ng-container matColumnDef="autor">
+              <th mat-header-cell *matHeaderCellDef> Autor </th>
+              <td mat-cell *matCellDef="let element"> {{element.autor}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="autor">
-          <th mat-header-cell *matHeaderCellDef> Autor </th>
-          <td mat-cell *matCellDef="let element"> {{element.autor}} </td>
-        </ng-container>
+            <ng-container matColumnDef="nome">
+              <th mat-header-cell *matHeaderCellDef> Nome </th>
+              <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+            </ng-container>
 
-       <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </mat-card>
- </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
