feat : alinhamentos de css

--- a/src/app/pages/login/signup/signup.component.html
+++ b/src/app/pages/login/signup/signup.component.html
@@ -10,7 +10,7 @@
                 <div class="text-center">
                   <img src="/assets/book.png"
                     style="width: 185px;" alt="logo">
-                  <h4 class="mt-1 mb-5 pb-1">Melhor Plataforma Para Alugar Livros</h4>
+                  <h4 class="mt-1 mb-5 pb-1">Melhor plataforma para gerenciar livros</h4>
                 </div>
 
                 <form (formGroup)="loginForm">
