--- a/src/app/pages/login/signin/signin.component.css
+++ b/src/app/pages/login/signin/signin.component.css
@@ -15,3 +15,10 @@
   border-bottom-right-radius: .3rem;
   }
   }
+.pass-reset{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
