--- a/src/app/pages/login/signin/signin.component.html
+++ b/src/app/pages/login/signin/signin.component.html
@@ -10,7 +10,7 @@
                 <div class="text-center">
                   <img src="/assets/book.png"
                     style="width: 185px;" alt="logo">
-                  <h4 class="mt-1 mb-5 pb-1">Melhor Plataforma Para Alugar Livros</h4>
+                  <h4 class="mt-1 mb-5 pb-1">Melhor plataforma para gerenciar livros</h4>
                 </div>
 
                 <form>
@@ -31,7 +31,7 @@
                     <button class="btn btn-primary btn-block fa-lg " routerLink="/home" type="button">
                     Logar
                     </button>
-                    <a class="text-muted" routerLink="#">Esqueceu a senha?</a>
+                    <a class="pass-reset" routerLink="#">Esqueceu a senha?</a>
                   </div>
 
                   <div class="d-flex align-items-center justify-content-center pb-4">
