feat : action delete book implemented

--- a/src/app/pages/home/homepage/homepage.component.css
+++ b/src/app/pages/home/homepage/homepage.component.css
@@ -5,9 +5,8 @@
   padding: 0;
   margin: 0;
   display: flex;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,75,101,1) 35%, rgba(0,212,255,1) 100%);
 }
+
 table {
   width: 100%;
 }
@@ -17,8 +16,7 @@ table {
 }
 
 .card-tool{
-  padding: 30px;
-  width: 100vw;
+  width: 82vw;
 }
 
 .title{
@@ -40,3 +38,10 @@ table {
   padding: 5px 5px;
 }
 
+.mat-table {
+  overflow: hidden;
+}
+
+.mat-table {
+  width: 100%;
+}
