--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container-fluid" style="overflow: hidden;">
   <div class="row flex-nowrap">
-    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark" style="overflow: hidden;">
       <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
         <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
           <span class="fs-5 d-none d-sm-inline">Cadastro de Livros</span>
@@ -26,7 +26,7 @@
         <hr>
       </div>
     </div>
-    <div class="col py-3">
+    <div class="col py-3" style="overflow: hidden;">
       <div class="container-tool">
         <mat-card class="card-tool">
           <mat-toolbar class="toobar">
@@ -59,6 +59,15 @@
               <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> Eventos </th>
+              <td mat-cell *matCellDef="let row" >
+                <button mat-icon-button (click)=deleteById(row)>
+                  <mat-icon color="warn">delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
@@ -67,3 +76,4 @@
     </div>
   </div>
 </div>
+
