--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -62,7 +62,7 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> Eventos </th>
               <td mat-cell *matCellDef="let row" >
-                <button mat-icon-button (click)=deleteById(row)>
+                <button mat-icon-button (click)=confirmDeleteById(row)>
                   <mat-icon color="warn">delete</mat-icon>
                 </button>
               </td>
