--- a/src/app/pages/login/signin/signin.component.html
+++ b/src/app/pages/login/signin/signin.component.html
@@ -19,7 +19,7 @@
                   <div class="form-outline mb-4">
                     <input type="email" id="form2Example11" class="form-control"
                       placeholder="Email" />
-                    <label class="form-label" for="form2Example11">Email</label>
+                    <label class="form-label" for="form2Example11">Usuario</label>
                   </div>
 
                   <div class="form-outline mb-4">
