--- a/src/app/pages/login/signin/signin.component.css
+++ b/src/app/pages/login/signin/signin.component.css
@@ -22,3 +22,11 @@
   justify-content: center;
   padding: 10px;
 }
+
+.form-user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
